--- a/src/main/resources/templates/event/event-detail.html
+++ b/src/main/resources/templates/event/event-detail.html
@@ -120,7 +120,7 @@
                                     </div>
                                     <div class="col text-center mt-3">
                                         <div class="image-wrapper">
-                                            <img id="preview" src="#" style="height:37.8rem; width:24.3rem" onerror="this.style.display='none';">
+                                            <img id="preview" th:src="${eventDto.getEventImagePath()}" style="height:37.8rem; width:24.3rem">
                                         </div>
                                         <div class="mt-1">
                                             <input id="filename" class="p-2" value="첨부파일" placeholder="첨부파일" style="border: 1px solid #dddddd; width: 78%; color: #999999; pointer-events: none;">
