fragment에 들어갈 문의해야 할 개수 counting 완료

--- a/src/main/resources/templates/fragment.html
+++ b/src/main/resources/templates/fragment.html
@@ -118,7 +118,7 @@
             </div>
         </div>
         <div class="col offset-5 mt-4">
-            <span class="translate-middle badge rounded-pill" style="position:absolute; top:25%; left:82.4%; background-color: rgb(220, 38,38);">
+            <span th:text="|${inquiryWaitSize}+|" class="translate-middle badge rounded-pill" style="position:absolute; top:25%; left:82.4%; background-color: rgb(220, 38,38);">
                 32+
                 <span class="visually-hidden">unread messages</span>
             </span>
