--- a/src/main/resources/templates/fragment.html
+++ b/src/main/resources/templates/fragment.html
@@ -34,7 +34,7 @@
                 지점 관리
             </div>
         </a>
-        <a href="/admin/line" th:href="@{/admin/line}"  class="row menu" style="height : 7vh; line-height: 7vh;" th:classappend="${param1} == 'edge' ? 'link' : 'white'">
+        <a href="/admin/line" th:href="@{/admin/line/list/0}"  class="row menu" style="height : 7vh; line-height: 7vh;" th:classappend="${param1} == 'edge' ? 'link' : 'white'">
             <div class="col-3 ms-4 mt-2 ps-3">
                 <i class="fa-solid fa-share-nodes fs-4"></i>
             </div>
