--- a/src/main/resources/templates/fragment.html
+++ b/src/main/resources/templates/fragment.html
@@ -26,7 +26,7 @@
                     대시보드
                 </div>
         </a>
-        <a href="/admin/node" th:href="@{/admin/node}" class="row menu" style="height : 7vh; line-height: 7vh;" th:classappend="${param1} == 'node' ? 'link' : 'white'">
+        <a href="/admin/node" th:href="@{/admin/node/list/0}" class="row menu" style="height : 7vh; line-height: 7vh;" th:classappend="${param1} == 'node' ? 'link' : 'white'">
             <div class="col-3 ms-4 mt-1 ps-3">
                 <i class="fa-solid fa-location-dot fs-4"></i>
             </div>
